# hexasphere_bevy

./: Cargo.toml  GenerateNumberTextures.ipynb  d20.json  hex_mesh.json  hexsphere_r10_d0.json  hexsphere_r10_d0_pretty.json  hexsphere_r10_d2.json  unity.json
assets/: hex.glb  pent.glb
src/: component_map.rs  gpt.rs  lib.rs  main.rs
